# katana-addons

./: .gitignore  CMakeLists.txt  LICENSE  README.md
python/: CMakeLists.txt
python/katana/: CMakeLists.txt
python/katana/Resources/: CMakeLists.txt
python/katana/Resources/GenericAssign/: PassDefineGA.xml
python/katana/Resources/Plugins/: PassResolve.py  RendererOutputExport.py  __init__.py
python/katana/Resources/SuperTools/PassDefine/v1/: Editor.py  Node.py  OpScripts.py  ScriptActions.py
python_katana/Resources/GenericAssign/: PassDefineGA.xml
python_katana/Resources/Plugins/: PassResolve.py  __init__.py
python_katana/Resources/SuperTools/PassDefine/: __init__.py
python_katana/Resources/SuperTools/PassDefine/v1/: Editor.py  Node.py  ScriptActions.py  __init__.py
rez/: CMakeLists.txt  build.sh  configure.sh  install.sh  package.py
src/Ops/: CMakeLists.txt
src/Ops/ComputeInstanceArray/: CMakeLists.txt  RegisterComputeInstanceArrayNode.py
src/Ops/ComputeInstanceArray/src/: ComputeInstanceArrayOp.cpp
src/Ops/PassCollections/: CMakeLists.txt
src/Ops/PassCollections/include/: PassCollections.h
src/Ops/PassCollections/src/: PassCollections.cpp
src/Ops/PassRays/: CMakeLists.txt
src/Ops/PassRays/include/: PassRays.h
src/Ops/PassRays/src/: PassRays.cpp
src/Ops/PassVisibility/: CMakeLists.txt
src/Ops/PassVisibility/include/: PassVisibility.h
src/Ops/PassVisibility/src/: PassVisibility.cpp
src/SuperTools/: CMakeLists.txt
src/SuperTools/PrmanInstanceArray/: README.md  __init__.py
src/SuperTools/PrmanInstanceArray/v1/: Editor.py  Node.py  OpScripts.py  ScriptActions.py  __init__.py
